revise fixed.css, replace right position with width 100% and let text-align center to work properly

--- a/css-positioning/fixed.css
+++ b/css-positioning/fixed.css
@@ -8,5 +8,5 @@ html {
 
   /* your code here */
   position: fixed;
-  right: 400px;
+  width: 100%;
 }
